--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Platypus</h1>
     <div>
         <ul>
-            <li><strong>Kingdom:</strong> Animalia</li>
-            <li><strong>Class:</strong> Mammalia</li>
-            <li><strong>Family:</strong> Ornithorhynchidae</li>
-            <li><strong>Clade:</strong>	Synapsida</li>
+            <li><strong>Kingdom:</strong> <em>Animalia</em></li>
+            <li><strong>Class:</strong> <em>Mammalia</em></li>
+            <li><strong>Family:</strong> <em>Ornithorhynchidae</em></li>
+            <li><strong>Clade:</strong>	<em>Synapsida</em></li>
             
         </ul>
     </div>
